fixing defaults handling in proxies